# eryndor

./: .gitignore  ARCHITECTURE_DECISIONS.md  CHARACTER_PROGRESSION.md  COMBAT_DESIGN_DOCUMENT.md  Cargo.toml  DIALOGUE_QUICK_REFERENCE.md  DIALOGUE_SYSTEM_GUIDE.md  DIALOGUE_SYSTEM_TECHNICAL.md  GAME_DESIGN_DOCUMENT.md  README.md  SKILL_PROGRESSION.md  TECHNICAL_GAME_SYSTEMS.md  TECH_DEMO_PLAN.md  advanced_combat_features.md  combat_architecture_design.md  combat_visual_audio_polish.md  config.ron  engaging_combat_mechanics.md
config/: damage_types.json  progression.json  quests.json  roles.json  schema.json  skills.json  weapons.json
config/dialogues/common/: greetings.json
config/dialogues/npcs/: merchant_aldric.json
crates/eryndor-character-controller/: Cargo.toml
crates/eryndor-character-controller/src/: lib.rs
crates/eryndor-config/: Cargo.toml
crates/eryndor-config/src/: lib.rs
crates/eryndor-core/: Cargo.toml
crates/eryndor-core/src/: components.rs  events.rs  lib.rs  traits.rs
crates/eryndor-dev-console/: Cargo.toml  README.md  TESTING.md
crates/eryndor-dev-console/src/: lib.rs
crates/eryndor-dev-console/src/commands/: debug.rs  entities.rs  mod.rs  movement.rs  zones.rs
crates/eryndor-dev-console/src/console/: mod.rs
crates/eryndor-dev-console/src/scripting/: mod.rs
crates/eryndor-dev-console/src/zones/: mod.rs
crates/eryndor-dev-console/zones/: npc-showcase.json  test-zone.json
crates/eryndor-dialogue/: Cargo.toml
crates/eryndor-dialogue/crates/eryndor-game/src/: plugin.rs  resources.rs
crates/eryndor-dialogue/src/: components.rs  lib.rs  systems.rs
crates/eryndor-dialogue/src/systems/: loader.rs
crates/eryndor-game/: Cargo.toml
crates/eryndor-game/src/: lib.rs  main.rs
crates/eryndor-progression/: Cargo.toml
crates/eryndor-progression/src/: lib.rs
crates/eryndor-quest/: Cargo.toml
crates/eryndor-quest/src/: lib.rs
crates/eryndor-ui/: Cargo.toml
crates/eryndor-ui/src/: lib.rs
docs/: SYSTEM_ARCHITECTURE_DIAGRAMS.md
docs/systems/: CHARACTER_CONTROLLER.md  DEBUG_SYSTEM.md  DIALOGUE_SYSTEM.md  QUEST_SYSTEM.md
src/: lib.rs  main.rs
src/components/: animation.rs  core.rs  dialogue.rs  mod.rs  player.rs  progression.rs  quest.rs
src/resources/: config.rs  debug_config.rs  input.rs  mod.rs  progression_config.rs
src/states/: mod.rs
src/systems/: animation.rs  assets.rs  biomes.rs  camera.rs  collision_debug.rs  combat.rs  config.rs  dialogue.rs  dialogue_interaction.rs  dialogue_loader.rs  ingame_ui.rs  input.rs  logging.rs  main_menu.rs  mod.rs  npc_spawning.rs  player.rs  progression.rs  progression_config.rs  quest.rs  quest_journal_ui.rs  quest_rewards.rs  stats.rs  terrain.rs  terrain_simple.rs  ui.rs  world_objects.rs
src/systems/character_controller/: collision.rs  config.rs  core.rs  debug.rs  mod.rs  movement.rs
src/utils/: helpers.rs  mod.rs  terrain_generator.rs
tests/: integration_tests.rs
