[package]
name = "eryndor-config"
version = "0.1.0"
edition = "2021"
description = "Configuration loading utilities for Eryndor game engine"
authors = ["Joe"]

[dependencies]
eryndor-core = { path = "../eryndor-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tempfile = "3.8"