[package]
name = "eryndor-game"
version = "0.1.0"
edition = "2021"
description = "Main Eryndor game application"
authors = ["Joe"]

[[bin]]
name = "eryndor"
path = "src/main.rs"

[[bin]]
name = "gltf_inspector"
path = "src/bin/gltf_inspector.rs"

[dependencies]
# Eryndor crates
eryndor-core = { path = "../eryndor-core" }
eryndor-config = { path = "../eryndor-config" }
eryndor-dialogue = { path = "../eryndor-dialogue" }
eryndor-dev-console = { path = "../eryndor-dev-console" }

# Bevy and core dependencies
bevy = { workspace = true }
bevy_animation = { workspace = true }
avian3d = { workspace = true }

# Networking for multiplayer
lightyear = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

# Asset loading
bevy_asset_loader = { workspace = true }

# Math and utilities
rand = { workspace = true }
noise = { workspace = true }
chrono = { workspace = true }

# Database (for future use)
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bevy_dev_tools = { workspace = true }